Fix information flex alignments
The information box should alwatys to located to the right

--- a/site/css/active_tournaments.css
+++ b/site/css/active_tournaments.css
@@ -65,6 +65,7 @@ p {
 
 .active-tournament {
     display: flex;
+    justify-content: space-between;
     background-color: #a9a9a9;
 }
 
